--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
         <li>Producción de pieza audiovisual</li>
         <li>Montaje y Posproducción</li> 
     </ul>
-    <script src="./carritoCompras.js"></script>
+    <script src="./carrito.js"></script>
 </body>
 </html>
