--- a/carrito.html
+++ b/carrito.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios</title>
-
+    <title>Carrito</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <!--FontAwesome SCRIPT -->
     <script src="https://kit.fontawesome.com/0407ded1a1.js" crossorigin="anonymous"></script>
-
+    
     <link rel="stylesheet" href="./css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,14 +25,14 @@
                </button>
                <div class="collapse navbar-collapse justify-content-start " id="navbarNav">
                  <ul class="navbar-nav align-items-center">
-                   <li class="nav-item menu__item menu__item--act">
-                     <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                   <li class="nav-item menu__item">
+                     <a class="nav-link" href="./index.html">HOME</a>
                    </li>
                    <li class="nav-item menu__item">
                      <a class="nav-link" href="./categorias.html">CATEGORIAS</a>
                    </li>
-                   <li class="nav-item menu__item">
-                     <a class="nav-link" href="./carrito.html">CARRITO</a>
+                   <li class="nav-item menu__item menu__item--act">
+                     <a class="nav-link active" aria-current="page" href="#">CARRITO</a>
                    </li>
                    <li class="nav-item menu__item">
                      <a class="nav-link" href="./backoffice.html">BACKOFFICE</a>
@@ -43,38 +41,30 @@
                </div>
              </div>
           </nav>
-           <hr class="menu__divisor  animate__animated animate__slideInLeft animate__slow">
+          <hr class="menu__divisor  animate__animated animate__slideInLeft animate__slow">
     </header>
-    <div class="inicio animate__animated animate__fadeInLeft animate__slow">
-        <div class="inicio__titulo"><h1 >Portfolio</h1></div>
-        <div class="inicio__container">
-          <a href="galeria.html"><img class=" img-fluid " src="./img/flotante_1.jpg" alt=""></a>
-          <a href="galeria.html"><img class=" img-fluid " src="./img/flotante_2.jpg" alt=""></a>
-          <a href="galeria.html"><img class=" img-fluid " src="./img/flotante_3.jpg" alt=""></a>
-          <a href="galeria.html"><img class=" img-fluid " src="./img/flotante_4.jpg" alt=""></a>
-        </div>
-        <div class="inicio__figcap"><figcaption class="epIndex">fotografia experimental & motion graphics</figcaption></div>
-       </div>
+    <div id="nueva-lista">
 
-       <!--FOOTER-->
-       <footer class="pie">
-          <ul class="pie__flex">
-             <li>
-               <a href="https://www.instagram.com/ivesersky/"><i class="icono--instagram bi bi-instagram icon-black"></i></a>
-             </li>
-             <li >
-               <a href="https://www.behance.net/ivanaesersky"><i class=" icono--behance fab fa-behance icon-black"></i></a>
-             </li>
-             <li>
-               <a href="#"><i class="icono--linkedin fab fa-linkedin-in icon-black"></i></a>
-             </li>
-             <li>
-               <a href="mailto:ivanaesersky@hotmail.com?subject=Email%20Subject"><i class="icono--email far fa-envelope icon-black"></i></a>
-             </li>
-           </ul>
-       </footer>
+    </div>
+
+    <footer class="pie">
+        <ul class="pie__flex">
+           <li>
+             <a href="https://www.instagram.com/ivesersky/"><i class="icono--instagram bi bi-instagram icon-black"></i></a>
+           </li>
+           <li >
+             <a href="https://www.behance.net/ivanaesersky"><i class=" icono--behance fab fa-behance icon-black"></i></a>
+           </li>
+           <li>
+             <a href="#"><i class="icono--linkedin fab fa-linkedin-in icon-black"></i></a>
+           </li>
+           <li>
+             <a href="mailto:ivanaesersky@hotmail.com?subject=Email%20Subject"><i class="icono--email far fa-envelope icon-black"></i></a>
+           </li>
+         </ul>
+     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="./home.js"></script>
+    <script src="./carrito.js"></script>
 </body>
 </html>
