--- a/categorias.html
+++ b/categorias.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios</title>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Categorias</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <!--FontAwesome SCRIPT -->
     <script src="https://kit.fontawesome.com/0407ded1a1.js" crossorigin="anonymous"></script>
 
@@ -15,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Raleway:wght@600&family=Yeseva+One&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -27,11 +28,11 @@
                </button>
                <div class="collapse navbar-collapse justify-content-start " id="navbarNav">
                  <ul class="navbar-nav align-items-center">
-                   <li class="nav-item menu__item menu__item--act">
-                     <a class="nav-link active" aria-current="page" href="#">HOME</a>
-                   </li>
                    <li class="nav-item menu__item">
-                     <a class="nav-link" href="./categorias.html">CATEGORIAS</a>
+                     <a class="nav-link" href="./index.html">HOME</a>
+                   </li>
+                   <li class="nav-item menu__item menu__item--act">
+                     <a class="nav-link active" aria-current="page" href="#"">CATEGORIAS</a>
                    </li>
                    <li class="nav-item menu__item">
                      <a class="nav-link" href="./carrito.html">CARRITO</a>
@@ -45,18 +46,12 @@
           </nav>
            <hr class="menu__divisor  animate__animated animate__slideInLeft animate__slow">
     </header>
-    <div class="inicio animate__animated animate__fadeInLeft animate__slow">
-        <div class="inicio__titulo"><h1 >Portfolio</h1></div>
-        <div class="inicio__container">
-          <a href="galeria.html"><img class=" img-fluid " src="./img/flotante_1.jpg" alt=""></a>
-          <a href="galeria.html"><img class=" img-fluid " src="./img/flotante_2.jpg" alt=""></a>
-          <a href="galeria.html"><img class=" img-fluid " src="./img/flotante_3.jpg" alt=""></a>
-          <a href="galeria.html"><img class=" img-fluid " src="./img/flotante_4.jpg" alt=""></a>
-        </div>
-        <div class="inicio__figcap"><figcaption class="epIndex">fotografia experimental & motion graphics</figcaption></div>
-       </div>
 
-       <!--FOOTER-->
+    <div id="productosPrint" class="container-fluid row">
+
+    </div>
+
+            <!--FOOTER-->
        <footer class="pie">
           <ul class="pie__flex">
              <li>
@@ -75,6 +70,7 @@
        </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="./home.js"></script>
+     <script src="./categorias.js"></script>
 </body>
+
 </html>
