--- a/carrito.html
+++ b/carrito.html
@@ -43,10 +43,15 @@
           </nav>
           <hr class="menu__divisor  animate__animated animate__slideInLeft animate__slow">
     </header>
-    <div id="nueva-lista">
 
+
+    <div id="productosPrint" class="container-fluid row">
     </div>
 
+    <button id="finalizarCompra">Finalizar compra</button>
+
+
+    
     <footer class="pie">
         <ul class="pie__flex">
            <li>
