--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="menu">
         <nav class="menu__desplegable navbar navbar-expand-lg navbar-light user-select-none ">
              <div class="container-fluid animate__fadeIn">
-               <a class="navbar-brand" href="index.html"><img class="img-fluid" src="./img/logo.png" alt="logo"></a>
+               <a class="navbar-brand" href="./index.html"><img class="img-fluid" src="./img/logo.png" alt="logo"></a>
                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                  <span class="navbar-toggler-icon"></span>
                </button>
@@ -48,14 +48,19 @@
     <div class="inicio animate__animated animate__fadeInLeft animate__slow">
         <div class="inicio__titulo"><h1 >Portfolio</h1></div>
         <div class="inicio__container">
-          <a href="galeria.html"><img class=" img-fluid " src="./img/flotante_1.jpg" alt=""></a>
-          <a href="galeria.html"><img class=" img-fluid " src="./img/flotante_2.jpg" alt=""></a>
-          <a href="galeria.html"><img class=" img-fluid " src="./img/flotante_3.jpg" alt=""></a>
-          <a href="galeria.html"><img class=" img-fluid " src="./img/flotante_4.jpg" alt=""></a>
+          <a href="#"><img class=" img-fluid " src="./img/flotante_1.jpg" alt=""></a>
+          <a href="#"><img class=" img-fluid " src="./img/flotante_2.jpg" alt=""></a>
+          <a href="#"><img class=" img-fluid " src="./img/flotante_3.jpg" alt=""></a>
+          <a href="#"><img class=" img-fluid " src="./img/flotante_4.jpg" alt=""></a>
         </div>
         <div class="inicio__figcap"><figcaption class="epIndex">fotografia experimental & motion graphics</figcaption></div>
        </div>
 
+    <div id="productosPrint">
+
+        
+    </div>
+    
        <!--FOOTER-->
        <footer class="pie">
           <ul class="pie__flex">
@@ -75,6 +80,6 @@
        </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="./home.js"></script>
+    <script src="./productos.js"></script>
 </body>
 </html>
