--- a/backoffice.html
+++ b/backoffice.html
@@ -30,11 +30,8 @@
                      <a class="nav-link" href="./index.html">HOME</a>
                    </li>
                    <li class="nav-item menu__item">
-                    <a class="nav-link" href="./categorias.html">CATEGORIAS</a>
+                    <a class="nav-link" href="./perfil.html">PERFIL</a>
                   </li>
-                   <li class="nav-item menu__item">
-                     <a class="nav-link" href="./carrito.html">CARRITO</a>
-                   </li>
                    <li class="nav-item menu__item menu__item--act">
                      <a class="nav-link active" aria-current="page" href="#">BACKOFFICE</a>
                    </li>
