Cambios de estilo y UI/UX design

--- a/galeria.html
+++ b/galeria.html
@@ -23,11 +23,11 @@
 
 </head>
 
-<body class="dark-bgr2">
+<body class="dark-bgr animate__animated animate__fadeInLeft animate__slow">
   <header class="menu">
     <nav class="menu__desplegable navbar navbar-expand-lg navbar-dark user-select-none " >
          <div class="container-fluid animate__fadeIn">
-           <a class="navbar-brand" href="./index.html"><img class="img-fluid" src="./img/logo.png" alt="logo"></a>
+           <a class="navbar-brand" href="./index.html"><img class="img-fluid invert" src="./img/logo.png" alt="logo"></a>
            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>
            </button>
@@ -87,16 +87,16 @@
            <footer class="pie">
              <ul class="pie__flex">
                  <li>
-                   <a href="https://www.instagram.com/ivesersky/"><i class="icono--instagram bi bi-instagram icon-black"></i></a>
+                   <a href="https://www.instagram.com/ivesersky/"><i class="invert icono--instagram bi bi-instagram icon-black"></i></a>
                  </li>
                  <li >
-                   <a href="https://www.behance.net/ivanaesersky"><i class=" icono--behance fab fa-behance icon-black"></i></a>
+                   <a href="https://www.behance.net/ivanaesersky"><i class="invert  icono--behance fab fa-behance icon-black"></i></a>
                  </li>
                  <li>
-                   <a href="#"><i class="icono--linkedin fab fa-linkedin-in icon-black"></i></a>
+                   <a href="#"><i class="invert icono--linkedin fab fa-linkedin-in icon-black"></i></a>
                  </li>
                  <li>
-                   <a href="mailto:ivanaesersky@hotmail.com?subject=Email%20Subject"><i class="icono--email far fa-envelope icon-black"></i></a>
+                   <a href="mailto:ivanaesersky@hotmail.com?subject=Email%20Subject"><i class="invert icono--email far fa-envelope icon-black"></i></a>
                  </li>
                </ul>
            </footer>
