--- a/perfil.html
+++ b/perfil.html
@@ -23,7 +23,7 @@
 
 </head>
 
-<body class="light-bgr">
+<body class="light-bgr animate__animated animate__fadeInLeft animate__slow">
   <header class="menu">
     <nav class="menu__desplegable navbar navbar-expand-lg navbar-light user-select-none ">
          <div class="container-fluid animate__fadeIn">
@@ -43,7 +43,7 @@
                 <a class="nav-link" href="./galeria.html">GALERIA</a>
               </li>
               <li class="nav-item menu__item">
-                <a class="nav-link" href="">SHOP</a>
+                <a class="nav-link" href="./shop.html">SHOP</a>
               </li>
               <li class="nav-item menu__item">
                 <a class="nav-link" href="./contacto.html">CONTACTO</a>
@@ -56,11 +56,13 @@
 </header>
 
     <div class="grilla-perfil">
-        <div class="fotoPerfil img-fluid animate__animated animate__slideInRight animate__slow "><img src="./img/fotoperfil.jpg" alt="foto principal"></div>
+        <div class="fotoPerfil img-fluid animate__animated animate__slideInLeft animate__slow ">
+            <img src="./img/fotoperfil.jpg" alt="foto principal">
+        </div>
 
         <section class="cajaPerfil animate__animated animate__fadeInLeft animate__slow"><!--FLEXBOX H1 Y TEXTO-->
             <div >
-                <h1>Esersky Ivana</h1>  
+                <h1>ARTIST:IVY</h1>  
                 <p>Artista multimedial, fotógrafa, directora artística, motion graphics designer, montajista y editora de videos nacida en el año 2000 y ubicada en la Ciudad de Buenos Aires. Con basta experiencia en el desarrollo y desenvolvimiento de proyectos artísticos independientes, hago uso de un amplio abanico de técnicas, herramientas y disciplinas para satisfacer las necesidades puntuales de cada proyecto, generando un discurso propio y llamativo, con un fuerte caracter profesional y moderno.</p>
             </div>               
         </section>
