Cmbios de estilo

--- a/galeria.html
+++ b/galeria.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,7 +27,7 @@
   <header class="menu">
     <nav class="menu__desplegable navbar navbar-expand-lg navbar-dark user-select-none " >
          <div class="container-fluid animate__fadeIn">
-           <a class="navbar-brand" href="./index.html"><img class="img-fluid invert" src="./img/logo.png" alt="logo"></a>
+           <a class="navbar-brand" href="./index.html"><img class="img-fluid invert" src="./img/logo3.png" alt="logo"></a>
            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>
            </button>
@@ -52,7 +52,7 @@
            </div>
          </div>
       </nav>
-       <hr class="menu__divisor  animate__animated animate__slideInLeft animate__slow">
+       <hr class="menu__divisor  animate__animated animate__slideInLeft animate__slow invert">
 </header>
 
 <div class="card-columns animate__animated animate__slideInLeft animate__slow">
@@ -82,7 +82,14 @@
     <img class=" round-borders" src="./img/galeria/expo2.jpg" alt="Card image cap">
   </div>
 </div>
-    
+
+<div class="color-blocks">
+  <a href="./index.html"><div class="block red-bgr" ></div></a>
+  <a href="./perfil.html"><div class="block sky-bgr"></div></a>
+  <a href="./galeria.html"><div class="block dark-bgr" style="border:1px solid rgb(241, 237, 230);"></div></a>
+  <a href="./shop.html"><div class="block red-bgr2"></div></a>
+  <a href="./contacto.html"><div class="block light-bgr"></div></a>
+ </div>
             <!--FOOTER-->
            <footer class="pie">
              <ul class="pie__flex">
