--- a/perfil.html
+++ b/perfil.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -23,11 +23,11 @@
 
 </head>
 
-<body class="light-bgr animate__animated animate__fadeInLeft animate__slow">
+<body class="sky-bgr animate__animated animate__fadeInLeft animate__slow">
   <header class="menu">
     <nav class="menu__desplegable navbar navbar-expand-lg navbar-light user-select-none ">
          <div class="container-fluid animate__fadeIn">
-           <a class="navbar-brand" href="./index.html"><img class="img-fluid" src="./img/logo.png" alt="logo"></a>
+           <a class="navbar-brand" href="./index.html"><img class="img-fluid" src="./img/logo3.png" alt="logo"></a>
            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>
            </button>
@@ -68,7 +68,13 @@
         </section>
 
     </div>
-
+    <div class="color-blocks">
+      <a href="./index.html"><div class="block red-bgr"></div></a>
+      <a href="./perfil.html"><div class="block sky-bgr" style="border:1px solid rgb(24, 20, 20);"></div></a>
+      <a href="./galeria.html"><div class="block dark-bgr"></div></a>
+      <a href="./shop.html"><div class="block red-bgr2"></div></a>
+      <a href="./contacto.html"><div class="block light-bgr"></div></a>
+     </div>
                <!--FOOTER-->
           <footer class="pie">
                 <ul class="pie__flex">
