POST method errors

--- a/galeria.html
+++ b/galeria.html
@@ -57,39 +57,41 @@
 
 <div class="card-columns animate__animated animate__slideInLeft animate__slow">
 
-  <div class="card round-borders" style="width:20rem;">
+  <div class="card round-borders">
     <img class=" round-borders" src="./img/galeria/expo7.jpg" alt="Card image cap">
   </div>
-  <div class="card round-borders" style="width: 20rem;">
+  <div class="card round-borders">
     <img class=" round-borders" src="./img/galeria/expo5.jpg" alt="Card image cap">
   </div>
-  <div class="card round-borders" style="width: 20rem;">
+  <div class="card round-borders">
     <img class=" round-borders" src="./img/galeria/respuesta6.jpg" alt="Card image cap">
   </div>
-  <div class="card round-borders" style="width: 20rem;">
+  <div class="card round-borders">
     <img class=" round-borders" src="./img/galeria/caraCinta.jpg" alt="Card image cap">
   </div>
-  <div class="card round-borders" style="width: 20rem;">
+  <div class="card round-borders" >
     <img class=" round-borders" src="./img/galeria/expo6.jpg" alt="Card image cap">
   </div>  
-  <div class="card round-borders" style="width: 20rem;">
+  <div class="card round-borders">
     <img class=" round-borders" src="./img/galeria/expo4.jpg" alt="Card image cap">
   </div>
-  <div class="card round-borders" style="width: 20rem;">
+  <div class="card round-borders">
     <img class=" round-borders" src="./img/galeria/expo3.jpg" alt="Card image cap">
   </div>
-  <div class="card round-borders" style="width: 20rem;">
+  <div class="card round-borders">
     <img class=" round-borders" src="./img/galeria/expo2.jpg" alt="Card image cap">
   </div>
+
 </div>
 
-<div class="color-blocks">
-  <a href="./index.html"><div class="block red-bgr" ></div></a>
-  <a href="./perfil.html"><div class="block sky-bgr"></div></a>
-  <a href="./galeria.html"><div class="block dark-bgr" style="border:1px solid rgb(241, 237, 230);"></div></a>
-  <a href="./shop.html"><div class="block red-bgr2"></div></a>
-  <a href="./contacto.html"><div class="block light-bgr"></div></a>
- </div>
+  <div class="flexVideos embed-responsive embed-responsive-16by9  animate__animated animate__fadeInLeft animate__slow">
+    <iframe class="embed-responsive-item" width="290" height="315" src="https://www.youtube.com/embed/jkmk-kxcquo?loop=1&modestbranding=1&showinfo=0&rel=0&fs=0&color=white" title="Dame Tu Amor - Andry Bett" frameborder="0" allow=" picture-in-picture" ></iframe>
+    <iframe class="embed-responsive-item" width="390" height="315" src="https://www.youtube.com/embed/QFeepkf4cHQ?loop=1&modestbranding=1&showinfo=0&rel=0&color=white" title="Dame Tu Amor (Video Oficial) - Andry Bett" frameborder="0" allow=" picture-in-picture"></iframe>
+    <iframe class="embed-responsive-item" width="390" height="315" src="https://www.youtube.com/embed/pAFFbNRxVDw?loop=1&modestbranding=1&showinfo=0&rel=0&color=white" title="Slogans - Fonso & Andry Bett" frameborder="0" allow=" picture-in-picture"></iframe>
+    <iframe class="embed-responsive-item" width="290" height="315" src="https://www.youtube.com/embed/_SRrQ5viAwI?loop=1&modestbranding=1&showinfo=0&rel=0&fs=0&color=white" title="Cariño Acaso No Lo Ves? - Andry Bett" frameborder="0" allow=" picture-in-picture" ></iframe>
+  </div>
+
+
             <!--FOOTER-->
            <footer class="pie">
              <ul class="pie__flex">
