--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Raleway:wght@600&family=Yeseva+One&family=Rubik&display=swap" rel="stylesheet">
     </head>
     
-    <body class="red-bgr animate__animated animate__fadeInLeft animate__slow">
+    <body class="light-bgr animate__animated animate__fadeInLeft animate__slow">
       <header class="menu">
         <nav class="menu__desplegable navbar navbar-expand-lg navbar-light user-select-none ">
              <div class="container-fluid animate__fadeIn">
@@ -53,16 +53,17 @@
     <div class="inicio animate__animated animate__slideInLeft animate__slow">
       <div class="inicio__titulo "><h1>PORTFOLIO</h1></div>
       <div class="inicio__figcap"><figcaption>IV ESERSKY FOTOGRAFIA ANALOGICA & PRODUCCION MULTIMEDIAL</figcaption></div>
+      <div class="container-gifs">
+             <img class="" src="./img/51fa9f0b1b.gif" alt="">
+             <img class="" src="./img/765b64fbf6.gif" alt="">         
+             <img class="" src="./img/9fdffaa328.gif" alt="">          
+             <img class="" src="./img/c1aa557769.gif" alt="">         
+      </div>
 
+      </div>
     </div>
 
-         <div class="color-blocks">
-          <a href="./index.html"><div class="block red-bgr" style="border:1px solid black;"></div></a>
-          <a href="./perfil.html"><div class="block sky-bgr"></div></a>
-          <a href="./galeria.html"><div class="block dark-bgr"></div></a>
-          <a href="./shop.html"><div class="block red-bgr2"></div></a>
-          <a href="./contacto.html"><div class="block light-bgr"></div></a>
-         </div>
+
         <!--FOOTER-->
            <footer class="pie">
               <ul class="pie__flex">
