Link a perfil de Linkedin ya funciona

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                    <a href="https://www.behance.net/ivanaesersky"><i class=" icono--behance fab fa-behance icon-black"></i></a>
                  </li>
                  <li>
-                   <a href="#"><i class="icono--linkedin fab fa-linkedin-in icon-black"></i></a>
+                   <a href="https://www.linkedin.com/in/ivana-esersky"><i class="icono--linkedin fab fa-linkedin-in icon-black"></i></a>
                  </li>
                  <li>
                    <a href="mailto:ivanaesersky@hotmail.com?subject=Email%20Subject"><i class="icono--email far fa-envelope icon-black"></i></a>
